small css change to avoid overlapse

--- a/recordm/customUI/css/_draw.css
+++ b/recordm/customUI/css/_draw.css
@@ -358,4 +358,5 @@
   width: 400px;
   height: 400px;
   margin-top: 15px;
+  margin-bottom: 25px;
 }
